adds loader, changes css

--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -9,7 +9,10 @@
       />
       <button class="btn" type="submit">Search</button>
     </form>
+    <!-- <p class="text" hidden>Loading images, please wait...</p> -->
 
-    <ul class="gallery"></ul>
+    <span hidden></span>
+
+    <ul class="gallery-list"></ul>
   </div>
 </section>
