--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,9 +9,10 @@
 @import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.64px;
   font-weight: 400;
 
   color: #242424;
@@ -24,10 +25,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.container{
+.container {
   width: 1440;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 56px;
-  padding-right: 56px;
+  padding: 32px;
+
+
 }
