--- a/src/partials/search.html
+++ b/src/partials/search.html
@@ -1,4 +1,4 @@
-<section class="search">
+<div class="search">
   <div class="container">
     <form class="form">
       <input
@@ -15,4 +15,4 @@
 
     <ul class="gallery-list"></ul>
   </div>
-</section>
+</div>
